--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,30 @@
 .read-the-docs {
   color: #888;
 }
+
+#title {
+  grid-row: 1;
+  grid-column: span 4;
+}
+
+ul {
+  list-style: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns:  1fr 1fr 1fr 1fr;
+  grid-template-rows: 12% 8% auto;
+  height: 100vh;
+  width: 100vh;
+  gap: 20px 10px;
+}
+
+.tabs {
+  grid-row:2;
+}
+
+.mainContent {
+  grid-row: 3;
+  grid-column: span 4;
+}
