--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,51 @@
   text-align: center;
 }
 
+#title {
+  grid-row: 1;
+  grid-column: span 4;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  padding: 10px;
+  font-size: larger;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns:  1fr 1fr 1fr 1fr;
+  grid-template-rows: 12% 8% auto;
+  height: 100vh;
+  width: 100vh;
+  gap: 20px 10px;
+}
+
+.tabs {
+  grid-row:2;
+}
+
+.mainContent {
+  grid-row: 3;
+  grid-column: span 4;
+}
+
+.myCanvas {
+  border:1px solid #000000;
+}
+
+button {
+  font-size: larger;
+}#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
